--- a/src/app/shared/components/findy-bar/findy-bar.component.html
+++ b/src/app/shared/components/findy-bar/findy-bar.component.html
@@ -4,6 +4,7 @@
 
   <mat-icon>search</mat-icon>
   <input
+    aria-label="search"
     placeholder="{{ placeholder || 'Search' }}"
     [ngModel]="findyValue"
     (blur)="isFocused = false"
