--- a/src/app/user-search/user-card/user-card.component.html
+++ b/src/app/user-search/user-card/user-card.component.html
@@ -1,7 +1,7 @@
 <div class="tde-github-user-card">
   <div class="row">
     <div class="col-1 pr-0 d-none d-md-block">
-      <img class="mt-1" [src]="githubUser.avatarUrl">
+      <img class="mt-1" [src]="githubUser.avatarUrl" alt="avatar">
     </div>
     <div class="col-md-9 col-sm-6">
       <div class="row ml-0">
