--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,3 +1,12 @@
 <mat-toolbar color="primary" class="tde-navbar mat-elevation-z4">
   <span>This.Exercise</span>
+  <span class="tde-navbar__spacer"></span>
+  <a 
+    mat-button 
+    href="https://github.com/wescopeland/this-dot-exercise"
+    target="_blank"
+    rel="noopener">
+    <mat-icon>open_in_new</mat-icon>
+    GitHub Repo
+  </a>
 </mat-toolbar>
