feat(pwa): detect when the user is offline

--- a/src/app/shared/components/empty-state/empty-state.component.html
+++ b/src/app/shared/components/empty-state/empty-state.component.html
@@ -9,7 +9,11 @@
     <ng-content select="[sub]"></ng-content>
   </div>
 
-  <button mat-button color="primary" (click)="handleCallToActionClick()">
-    {{ buttonLabel || "Continue" }}
+  <button 
+    *ngIf="buttonLabel" 
+    mat-button 
+    color="primary" 
+    (click)="handleCallToActionClick()">
+    {{ buttonLabel }}
   </button>
 </div>
